Add Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ deploy:
   github-token: $GITHUB_TOKEN
   local-dir: dist/
   target-branch: master
-  commit_message: "Deploy release ${TRAVIS_TAG}"
+  commit_message: "Deploy release from ${TRAVIS_TAG}"
   on:
     branch: dev
