--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "sass-loader": "^7.1.0",
