--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "app-manifest-webpack-plugin": "^1.2.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
