--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "workbox-webpack-plugin": "^4.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
