--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --open --mode development",
-    "prod": "webpack --mode production"
+    "prod": "webpack-dev-server --open --mode production",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
